--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "homepage": "http://Musicus69.github.io/woodCoInc",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build && copy build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
